Support for spring.profiles